--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,8 @@
       "destination": "/index.html"
     }
   ],
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
+  "buildCommand": "cd chat-app && npm install && npm run build",
+  "outputDirectory": "chat-app/dist",
   "framework": "vite",
   "regions": ["iad1"]
-} 
+}
