--- a/vercel.json
+++ b/vercel.json
@@ -5,14 +5,22 @@
       "src": "chat-app/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "dist",
+        "buildCommand": "cd .. && cd chat-app && npm install && npm run build"
       }
     }
   ],
   "routes": [
+    { 
+      "handle": "filesystem"
+    },
+    {
+      "src": "/assets/(.*)",
+      "dest": "/chat-app/dist/assets/$1"
+    },
     {
       "src": "/(.*)",
-      "dest": "chat-app/dist/$1"
+      "dest": "/chat-app/dist/index.html"
     }
   ]
 } 
